chore: remove seldomly used appearance widget mixin

--- a/packages/default/scss/common/_base.scss
+++ b/packages/default/scss/common/_base.scss
@@ -113,7 +113,11 @@ $widget-border-width: 1px !default;
     // Widget
     .k-widget {
         @extend %text-selection !optional;
-        @include appearance( widget );
+        @include fill(
+            $widget-text,
+            $widget-bg,
+            $widget-border
+        );
     }
 
 
