fix: split functions and variables into separate import files

--- a/packages/default/scss/_variables.scss
+++ b/packages/default/scss/_variables.scss
@@ -1,6 +1,4 @@
-@import "mixins/core/config-maps";
-@import "mixins/core/math";
-@import "mixins/colors";
+@import "_functions.scss";
 
 
 // Options
