--- a/packages/bootstrap/scss/_variables.scss
+++ b/packages/bootstrap/scss/_variables.scss
@@ -1,6 +1,4 @@
-@import "~@progress/kendo-theme-default/scss/mixins/core/config-maps";
-@import "~@progress/kendo-theme-default/scss/mixins/core/math";
-@import "~@progress/kendo-theme-default/scss/mixins/colors";
+@import "functions";
 @import "bootstrap-overrides";
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
