--- a/packages/material/scss/_variables.scss
+++ b/packages/material/scss/_variables.scss
@@ -1351,9 +1351,9 @@ $scheduler-nonwork-bg: mix( $panel-text, $panel-bg, 3% ) !default;
 
 
 // PDF viewer
-$pdf-viewer-bg: null !default;
-$pdf-viewer-text: null !default;
-$pdf-viewer-border: null !default;
+$pdf-viewer-bg: $panel-bg !default;
+$pdf-viewer-text: $panel-text !default;
+$pdf-viewer-border: $panel-border !default;
 
 $pdf-viewer-canvas-bg: $app-bg !default;
 $pdf-viewer-canvas-text: null !default;
