fix(toolbar): spacing between separator and adjacent element
In Angular rendering.

--- a/packages/default/scss/toolbar/_layout.scss
+++ b/packages/default/scss/toolbar/_layout.scss
@@ -158,6 +158,11 @@
             &:not(:last-child) {
                 margin-right: $toolbar-padding-x;
             }
+
+            .k-separator {
+                margin: 0;
+                border-color: $panel-border;
+            }
         }
 
         &[dir="rtl"] {
