--- a/packages/default/scss/card/_layout.scss
+++ b/packages/default/scss/card/_layout.scss
@@ -164,6 +164,11 @@
             border-color: inherit;
         }
 
+        .k-button {
+            max-width: 100%;
+            white-space: normal;
+        }
+
         > .k-button.k-flat:first-child {
             margin-left: (-$button-padding-x);
         }
