--- a/packages/default/scss/timeline/_layout.scss
+++ b/packages/default/scss/timeline/_layout.scss
@@ -325,7 +325,7 @@
 
             .k-timeline-track {
                 overflow: hidden;
-                padding: 0 $timeline-track-arrow-width;
+                margin: 0 $timeline-track-arrow-width;
                 position: relative;
                 z-index: 2;
 
