--- a/packages/material/scss/gantt/_theme.scss
+++ b/packages/material/scss/gantt/_theme.scss
@@ -31,6 +31,24 @@
     }
 
 
+    //Timeline
+    .k-gantt-timeline {
+
+        tbody > tr:not(:only-child) > .k-header {
+            border-left-color: $grid-border;
+        }
+        .k-rtl & {
+
+            .k-grid-header {
+
+                tbody > tr:not(:only-child) > .k-header {
+                    border-right-color: $grid-border;
+                }
+            }
+        }
+    }
+
+
     // Rows and colls
     .k-gantt-rows {}
     .k-gantt-columns {}
