chore(treelist): remove units for 0 values lint warning

--- a/packages/default/scss/treelist/_layout.scss
+++ b/packages/default/scss/treelist/_layout.scss
@@ -53,8 +53,8 @@
         }
 
         .k-grid-toolbar {
-            top: 0px;
-            left: 0px;
+            top: 0;
+            left: 0;
         }
     }
 
