chore(filter): dropdowns auto width

--- a/packages/default/scss/filter/_layout.scss
+++ b/packages/default/scss/filter/_layout.scss
@@ -38,6 +38,10 @@
             .k-toolbar {
                 border-style: solid;
             }
+
+            .k-filter-dropdown {
+                width: auto;
+            }
         }
 
         .k-filter-item {
