fix: add border color styling for the modified header table of the Gantt Timeline

--- a/packages/default/scss/gantt/_theme.scss
+++ b/packages/default/scss/gantt/_theme.scss
@@ -53,6 +53,15 @@
     }
 
 
+    // Timeline
+    .k-gantt-timeline {
+
+        .k-header {
+            border-color: inherit;
+        }
+    }
+
+
     // Treelist
     .k-gantt-treelist {
         background-color: darken( $panel-bg, 2 );
